# gpt-from-scratch

./: .coveragerc  .gitignore  LICENSE  README.md  ask.sh  pyproject.toml
gpt_from_scratch/: gpt2.py
scripts/: ask.sh  test.sh
tests/: test_gpt2.py
