[tool.poetry]
name = "gpt-from-scratch"
version = "0.1.0"
description = ""
authors = ["James Sturges <james@jsturges.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "gpt_from_scratch"}]

[tool.poetry.dependencies]
python = ">=3.9.0,<3.12"
numpy = "1.24.1"
regex = "2017.4.5"
requests = "2.27.1"
tqdm = "4.64.0"
fire = "0.5.0"
tensorflow = {version = "2.11.0", markers = "sys_platform != \"darwin\" or platform_machine != \"arm64\""}
tensorflow-macos = {version = "2.11.0", markers = "sys_platform == \"darwin\" and platform_machine == \"arm64\""}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
